make sure user can view the larger images of the ugallery when he's chosen to view larger images on click, make sure the caption is not whitish and is visible

--- a/elements/upfront-gallery/css/ugallery.css
+++ b/elements/upfront-gallery/css/ugallery.css
@@ -608,6 +608,9 @@ div.ugallery-magnific-labels {
 	text-align: center;
 }
 
+.mfp-title{
+	color: #343434;
+}
 .upfront-ui .ugallery-magnific-toggle:hover {
 	opacity: 1;
 }
